HybroLang/HybroLangParser.py
# Generated from HybroLang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class HybroLangParser ( Parser ):

    grammarFileName = "HybroLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "','", "';'", 
                     "'for'", "'return'", "'='", "'['", "']'", "'*'", "'/'", 
                     "'+'", "'-'", "'<<'", "'>>'", "'&&'", "'||'", "'int'", 
                     "'uint'", "'sint'", "'suint'", "'flt'", "'cpl'", "'pix'", 
                     "'ipv4'", "'ipv6'", "'[]'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DecimalFloatingConstant", "IntegerConstant", "DecimalConstant", 
                      "Name", "INLINE", "WhiteSpace", "LineComment", "NewLine" ]

    RULE_compilationunit = 0
    RULE_function = 1
    RULE_fndcl = 2
    RULE_fnprototype = 3
    RULE_fnbody = 4
    RULE_paramdcllist = 5
    RULE_localvardef = 6
    RULE_vardcllist = 7
    RULE_vardcl = 8
    RULE_actionlist = 9
    RULE_condexpr = 10
    RULE_action = 11
    RULE_returnexpr = 12
    RULE_affectexpr = 13
    RULE_unaryexpr = 14
    RULE_varorvalue = 15
    RULE_datatype = 16
    RULE_intconstvalue = 17
    RULE_constvalue = 18
    RULE_constinline = 19
    RULE_typebase = 20
    RULE_condOperator = 21

    ruleNames =  [ "compilationunit", "function", "fndcl", "fnprototype", 
                   "fnbody", "paramdcllist", "localvardef", "vardcllist", 
                   "vardcl", "actionlist", "condexpr", "action", "returnexpr", 
                   "affectexpr", "unaryexpr", "varorvalue", "datatype", 
                   "intconstvalue", "constvalue", "constinline", "typebase", 
                   "condOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    DecimalFloatingConstant=36
    IntegerConstant=37
    DecimalConstant=38
    Name=39
    INLINE=40
    WhiteSpace=41
    LineComment=42
    NewLine=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationunitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.FunctionContext,i)


        def getRuleIndex(self):
            return HybroLangParser.RULE_compilationunit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationunit" ):
                return visitor.visitCompilationunit(self)
            else:
                return visitor.visitChildren(self)




    def compilationunit(self):

        localctx = HybroLangParser.CompilationunitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationunit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.function()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HybroLangParser.T__19) | (1 << HybroLangParser.T__20) | (1 << HybroLangParser.T__21) | (1 << HybroLangParser.T__22) | (1 << HybroLangParser.T__23) | (1 << HybroLangParser.T__24) | (1 << HybroLangParser.T__25) | (1 << HybroLangParser.T__26) | (1 << HybroLangParser.T__27))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fndcl(self):
            return self.getTypedRuleContext(HybroLangParser.FndclContext,0)


        def fnbody(self):
            return self.getTypedRuleContext(HybroLangParser.FnbodyContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = HybroLangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.fndcl()
            self.state = 50
            self.fnbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FndclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(HybroLangParser.DatatypeContext,0)


        def Name(self):
            return self.getToken(HybroLangParser.Name, 0)

        def fnprototype(self):
            return self.getTypedRuleContext(HybroLangParser.FnprototypeContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_fndcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFndcl" ):
                return visitor.visitFndcl(self)
            else:
                return visitor.visitChildren(self)




    def fndcl(self):

        localctx = HybroLangParser.FndclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fndcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.datatype()
            self.state = 53
            self.match(HybroLangParser.Name)
            self.state = 54
            self.fnprototype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FnprototypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdcllist(self):
            return self.getTypedRuleContext(HybroLangParser.ParamdcllistContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_fnprototype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnprototype" ):
                return visitor.visitFnprototype(self)
            else:
                return visitor.visitChildren(self)




    def fnprototype(self):

        localctx = HybroLangParser.FnprototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fnprototype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(HybroLangParser.T__0)
            self.state = 57
            self.paramdcllist()
            self.state = 58
            self.match(HybroLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FnbodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actionlist(self):
            return self.getTypedRuleContext(HybroLangParser.ActionlistContext,0)


        def localvardef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.LocalvardefContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.LocalvardefContext,i)


        def returnexpr(self):
            return self.getTypedRuleContext(HybroLangParser.ReturnexprContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_fnbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnbody" ):
                return visitor.visitFnbody(self)
            else:
                return visitor.visitChildren(self)




    def fnbody(self):

        localctx = HybroLangParser.FnbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fnbody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(HybroLangParser.T__2)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HybroLangParser.T__19) | (1 << HybroLangParser.T__20) | (1 << HybroLangParser.T__21) | (1 << HybroLangParser.T__22) | (1 << HybroLangParser.T__23) | (1 << HybroLangParser.T__24) | (1 << HybroLangParser.T__25) | (1 << HybroLangParser.T__26) | (1 << HybroLangParser.T__27))) != 0):
                self.state = 61
                self.localvardef()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.actionlist()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HybroLangParser.T__7:
                self.state = 68
                self.returnexpr()


            self.state = 71
            self.match(HybroLangParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamdcllistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.VardclContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.VardclContext,i)


        def getRuleIndex(self):
            return HybroLangParser.RULE_paramdcllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamdcllist" ):
                return visitor.visitParamdcllist(self)
            else:
                return visitor.visitChildren(self)




    def paramdcllist(self):

        localctx = HybroLangParser.ParamdcllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramdcllist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.vardcl()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HybroLangParser.T__4:
                self.state = 74
                self.match(HybroLangParser.T__4)
                self.state = 75
                self.vardcl()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LocalvardefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardcllist(self):
            return self.getTypedRuleContext(HybroLangParser.VardcllistContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_localvardef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalvardef" ):
                return visitor.visitLocalvardef(self)
            else:
                return visitor.visitChildren(self)




    def localvardef(self):

        localctx = HybroLangParser.LocalvardefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_localvardef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.vardcllist()
            self.state = 82
            self.match(HybroLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardcllistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardcl(self):
            return self.getTypedRuleContext(HybroLangParser.VardclContext,0)


        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(HybroLangParser.Name)
            else:
                return self.getToken(HybroLangParser.Name, i)

        def getRuleIndex(self):
            return HybroLangParser.RULE_vardcllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardcllist" ):
                return visitor.visitVardcllist(self)
            else:
                return visitor.visitChildren(self)




    def vardcllist(self):

        localctx = HybroLangParser.VardcllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardcllist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.vardcl()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HybroLangParser.T__4:
                self.state = 85
                self.match(HybroLangParser.T__4)
                self.state = 86
                self.match(HybroLangParser.Name)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(HybroLangParser.DatatypeContext,0)


        def Name(self):
            return self.getToken(HybroLangParser.Name, 0)

        def getRuleIndex(self):
            return HybroLangParser.RULE_vardcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardcl" ):
                return visitor.visitVardcl(self)
            else:
                return visitor.visitChildren(self)




    def vardcl(self):

        localctx = HybroLangParser.VardclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.datatype()
            self.state = 93
            self.match(HybroLangParser.Name)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.ActionContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.ActionContext,i)


        def getRuleIndex(self):
            return HybroLangParser.RULE_actionlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionlist" ):
                return visitor.visitActionlist(self)
            else:
                return visitor.visitChildren(self)




    def actionlist(self):

        localctx = HybroLangParser.ActionlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_actionlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HybroLangParser.T__6 or _la==HybroLangParser.Name:
                self.state = 95
                self.action()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varorvalue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.VarorvalueContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.VarorvalueContext,i)


        def condOperator(self):
            return self.getTypedRuleContext(HybroLangParser.CondOperatorContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_condexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondexpr" ):
                return visitor.visitCondexpr(self)
            else:
                return visitor.visitChildren(self)




    def condexpr(self):

        localctx = HybroLangParser.CondexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.varorvalue()
            self.state = 102
            self.condOperator()
            self.state = 103
            self.varorvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def affectexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.AffectexprContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.AffectexprContext,i)


        def condexpr(self):
            return self.getTypedRuleContext(HybroLangParser.CondexprContext,0)


        def actionlist(self):
            return self.getTypedRuleContext(HybroLangParser.ActionlistContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_action

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = HybroLangParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_action)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HybroLangParser.Name]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.affectexpr()
                self.state = 106
                self.match(HybroLangParser.T__5)
                pass
            elif token in [HybroLangParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(HybroLangParser.T__6)
                self.state = 109
                self.match(HybroLangParser.T__0)
                self.state = 110
                self.affectexpr()
                self.state = 111
                self.match(HybroLangParser.T__5)
                self.state = 112
                self.condexpr()
                self.state = 113
                self.match(HybroLangParser.T__5)
                self.state = 114
                self.affectexpr()
                self.state = 115
                self.match(HybroLangParser.T__1)
                self.state = 116
                self.match(HybroLangParser.T__2)
                self.state = 117
                self.actionlist()
                self.state = 118
                self.match(HybroLangParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryexpr(self):
            return self.getTypedRuleContext(HybroLangParser.UnaryexprContext,0)


        def getRuleIndex(self):
            return HybroLangParser.RULE_returnexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnexpr" ):
                return visitor.visitReturnexpr(self)
            else:
                return visitor.visitChildren(self)




    def returnexpr(self):

        localctx = HybroLangParser.ReturnexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(HybroLangParser.T__7)
            self.state = 123
            self.unaryexpr(0)
            self.state = 124
            self.match(HybroLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AffectexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(HybroLangParser.Name, 0)

        def unaryexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.UnaryexprContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.UnaryexprContext,i)


        def getRuleIndex(self):
            return HybroLangParser.RULE_affectexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAffectexpr" ):
                return visitor.visitAffectexpr(self)
            else:
                return visitor.visitChildren(self)




    def affectexpr(self):

        localctx = HybroLangParser.AffectexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_affectexpr)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(HybroLangParser.Name)
                self.state = 127
                self.match(HybroLangParser.T__8)
                self.state = 128
                self.unaryexpr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(HybroLangParser.Name)
                self.state = 130
                self.match(HybroLangParser.T__9)
                self.state = 131
                self.unaryexpr(0)
                self.state = 132
                self.match(HybroLangParser.T__10)
                self.state = 133
                self.match(HybroLangParser.T__8)
                self.state = 134
                self.unaryexpr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def varorvalue(self):
            return self.getTypedRuleContext(HybroLangParser.VarorvalueContext,0)


        def unaryexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HybroLangParser.UnaryexprContext)
            else:
                return self.getTypedRuleContext(HybroLangParser.UnaryexprContext,i)


        def getRuleIndex(self):
            return HybroLangParser.RULE_unaryexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryexpr" ):
                return visitor.visitUnaryexpr(self)
            else:
                return visitor.visitChildren(self)



    def unaryexpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HybroLangParser.UnaryexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_unaryexpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.varorvalue()
            self._ctx.stop = self._input.LT(-1)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 153
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = HybroLangParser.UnaryexprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unaryexpr)
                        self.state = 141
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 142
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==HybroLangParser.T__11 or _la==HybroLangParser.T__12):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 143
                        self.unaryexpr(6)
                        pass

                    elif la_ == 2:
                        localctx = HybroLangParser.UnaryexprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unaryexpr)
                        self.state = 144
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 145
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==HybroLangParser.T__13 or _la==HybroLangParser.T__14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 146
                        self.unaryexpr(5)
                        pass

                    elif la_ == 3:
                        localctx = HybroLangParser.UnaryexprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unaryexpr)
                        self.state = 147
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 148
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==HybroLangParser.T__15 or _la==HybroLangParser.T__16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 149
                        self.unaryexpr(4)
                        pass

                    elif la_ == 4:
                        localctx = HybroLangParser.UnaryexprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unaryexpr)
                        self.state = 150
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 151
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==HybroLangParser.T__17 or _la==HybroLangParser.T__18):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 152
                        self.unaryexpr(3)
                        pass

             
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class VarorvalueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HybroLangParser.RULE_varorvalue

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarorvalueVarContext(VarorvalueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HybroLangParser.VarorvalueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(HybroLangParser.Name, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarorvalueVar" ):
                return visitor.visitVarorvalueVar(self)
            else:
                return visitor.visitChildren(self)


    class VarorvalueArrayContext(VarorvalueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HybroLangParser.VarorvalueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(HybroLangParser.Name, 0)
        def unaryexpr(self):
            return self.getTypedRuleContext(HybroLangParser.UnaryexprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarorvalueArray" ):
                return visitor.visitVarorvalueArray(self)
            else:
                return visitor.visitChildren(self)


    class VarorvalueConstContext(VarorvalueContext):
